k8s/overlays/prod/endpoints.yaml
apiVersion: v1
kind: Endpoints

metadata:
  name: umami-vm-svc
  namespace: umami

subsets:
  - addresses:
      - ip: 10.20.......

    ports:
      - name: http
        port: 3000
